--- a/SEL4C/templates/index.html
+++ b/SEL4C/templates/index.html
@@ -19,66 +19,66 @@
 
       function drawChart() {
 
-        var data = google.visualization.arrayToDataTable([
-          ['Gender', 'Gender per User'],
-          ['Hombre',     30],
-          ['Mujer',      35],
-          ['Otro',  15],
-          ['Prefiero no Responder', 20],
-        ]);
+        // var data = google.visualization.arrayToDataTable([
+        //   ['Gender', 'Gender per User'],
+        //   ['Hombre',     30],
+        //   ['Mujer',      35],
+        //   ['Otro',  15],
+        //   ['Prefiero no Responder', 20],
+        // ]);
 
-        var options = {
-          title: 'Género'
-        };
+        // var options = {
+        //   title: 'Género'
+        // };
 
-        var chart = new google.visualization.PieChart(document.getElementById('genderPiechart'));
+        // var chart = new google.visualization.PieChart(document.getElementById('genderPiechart'));
 
-        chart.draw(data, options);
+        // chart.draw(data, options);
 
-        var data = google.visualization.arrayToDataTable([
-          ['Grade', 'Academic Grade per User'],
-          ['Pregrado',     40],
-          ['Posgrado',      45],
-          ['Educación Continua',  30],
-        ]);
+        // var data = google.visualization.arrayToDataTable([
+        //   ['Grade', 'Academic Grade per User'],
+        //   ['Pregrado',     40],
+        //   ['Posgrado',      45],
+        //   ['Educación Continua',  30],
+        // ]);
 
-        var options = {
-          title: 'Grado Académico'
-        };
+        // var options = {
+        //   title: 'Grado Académico'
+        // };
 
-        var chart = new google.visualization.PieChart(document.getElementById('academicPiechart'));
+        // var chart = new google.visualization.PieChart(document.getElementById('academicPiechart'));
 
-        chart.draw(data, options);
+        // chart.draw(data, options);
 
-        var data = google.visualization.arrayToDataTable([
-          ['Country', 'Country per User'],
-          ['Mexico',     78],
-          ['USA',      60],
-          ['Canadá',  25],
-          ['Honduras', 4],
-          ['Bolivia',    6],
-          ['Guatemala',    3],
-          ['Otros',    3]
-        ]);
+        // var data = google.visualization.arrayToDataTable([
+        //   ['Country', 'Country per User'],
+        //   ['Mexico',     78],
+        //   ['USA',      60],
+        //   ['Canadá',  25],
+        //   ['Honduras', 4],
+        //   ['Bolivia',    6],
+        //   ['Guatemala',    3],
+        //   ['Otros',    3]
+        // ]);
 
-        var options = {
-          title: 'País'
-        };
+        // var options = {
+        //   title: 'País'
+        // };
 
-        var chart = new google.visualization.PieChart(document.getElementById('countryPiechart'));
+        // var chart = new google.visualization.PieChart(document.getElementById('countryPiechart'));
 
-        chart.draw(data, options);
+        // chart.draw(data, options);
 
 
         var data = google.visualization.arrayToDataTable([
         ["Actividad", "Usarios en esta Actividad", { role: "style" } ],
-        ["Ninguna Actividad", 2, "#990099"],
-        ["Diagnóstico Inicial", 3, "#DD4477"],
-        ["Act.1", 6, "#DC3912"],
-        ["Act.2", 12, "#3366CC"],
-        ["Act.3", 15, "#FF9900"],
-        ["Act.4", 25, "#109618"],
-        ["Act.Final", 35, "#0099C6"],
+        ["Ninguna Actividad", parseInt('{{ peopleWhoHaventStarted }}'), "#990099"],
+        ["Diagnóstico Inicial", parseInt('{{ peopleInDI }}'), "#DD4477"],
+        ["Act.1", parseInt('{{ peopleInAct1 }}'), "#DC3912"],
+        ["Act.2", parseInt('{{ peopleInAct2 }}'), "#3366CC"],
+        ["Act.3", parseInt('{{ peopleInAct3 }}'), "#FF9900"],
+        ["Act.4", parseInt('{{ peopleInAct4 }}'), "#109618"],
+        ["Act.Final", parseInt('{{ peopleInEF }}'), "#0099C6"],
       ]);
 
       var view = new google.visualization.DataView(data);
@@ -103,7 +103,7 @@
 
       var data = google.visualization.arrayToDataTable([
           ['Label', 'Value'],
-          ['-', 95]
+          ['-', parseInt('{{ average_rating }}')*20]
         ]);
 
         var options = {
@@ -126,10 +126,14 @@
   <body>
     <nav class="navbar navbar-dark fixed-top flex-md-nowrap p-0 shadow" style="background-color: #0039A6;">
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{% url 'index' %}">SEL4C</a>
-      <ul class="navbar-nav px-3">
-    <li class="nav-item text-nowrap">
-      <a class="nav-link" href="{% url 'login' %}"> Cerrar Sesión</a>
-    </li>
+      <ul class="navbar-nav px-3 flex-row">
+
+        <li class="nav-item text-nowrap">
+          <a class="nav-link text-light mr-5">   {{ request.user}}</a>
+        </li>
+        <li class="nav-item text-nowrap">
+          <a class="nav-link text-light" href="{% url 'logoutUser' %}"> Cerrar Sesión</a>
+        </li>
   </ul>
 </nav>
 
@@ -145,13 +149,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'users' %}">
+            <a class="nav-link" href="{% url 'users' 1 %}">
               <span data-feather="file"></span>
               Usuarios
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'managers' %}">
+            <a class="nav-link" href="{% url 'managers' 1 %}">
               <span data-feather="shopping-cart"></span>
               Administradores
             </a>
@@ -180,12 +184,12 @@
       <div class="d-flex justify-content-around align-items-center border-bottom border-dark-subtle">
         <div id="columnchart_values" style="height: 400px;"></div>
       </div>
-      
+<!--       
       <div>
         <div id="genderPiechart" style="height: 400px;"></div>
         <div id="academicPiechart" style="height: 400px;"></div>
         <div id="countryPiechart" style="height: 400px;"></div>
-      </div>
+      </div> -->
       
       
       
@@ -201,4 +205,18 @@
 <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.9.0/dist/feather.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.7.3/dist/Chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+{% if messages %}
+  {% for m in messages %}
+  <script>
+    Swal.fire({
+      icon: 'error',
+      title: 'Oops...',
+      text: 'Parece que no tienes acceso a Administradores!',
+    })
+  </script>
+  {% endfor %}
+{% endif %}
+
 </html>
