--- a/SEL4C/templates/login.html
+++ b/SEL4C/templates/login.html
@@ -18,20 +18,28 @@
       <div class="w-25 h-100 p-3 d-flex flex-column justify-content-center align-items-center" style="background-color: white">
         <h1>SEL4C</h1>
         <h3 class="mb-4">Iniciar Sesión</h3>
-        <form class="w-100">
+        
+        
+        
+        <form class="w-100" method="post">
+          {% csrf_token %}
+
           <div class="mb-0 h-50">
-            <input type="email" class="form-control rounded-1 h-75 border border-dark" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo" required>
+            <input name="username" type="text" class="form-control rounded-1 h-75 border border-dark" aria-describedby="emailHelp" placeholder="Usuario" required>
           </div>
           <div class="mb-3 h-50">
-            <input type="password" class="form-control rounded-1 h-75 border border-dark" id="exampleInputPassword1" placeholder="Contraseña" required>
+            <input name="password" type="password" class="form-control rounded-1 h-75 border border-dark" placeholder="Contraseña" required>
           </div>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Recuérdame</label>
-          </div>
-          <a href="{% url 'index' %}" class="btn btn-info w-100" style="background-color: #0039A6; color: white" role="button"> Iniciar Sesión</a>
 
+
+          <button type="submit" class="btn btn-info w-100" style="background-color: #0039A6; color: white">Iniciar Sesión</button>
+          {% if error_message %}
+          <p class="error-message text-danger pt-2" style="font-weight: 600;">{{ error_message }}</p>
+          {% endif %}
         </form>
+
+
+
       </div>
     </div>
     
