--- a/SEL4C/templates/users.html
+++ b/SEL4C/templates/users.html
@@ -12,41 +12,106 @@
     <title>SEL4C Dashboard</title>
   </head>
   <script>
+    document.addEventListener("DOMContentLoaded", function () {
+    const searchInput = document.getElementById("searchInput");
+    const table = document.getElementById("myTable");
+    const tableRows = table.getElementsByTagName("tr");
+
+    searchInput.addEventListener("input", function () {
+        const filter = searchInput.value.toLowerCase();
+
+        for (let i = 1; i < tableRows.length; i++) {
+            const row = tableRows[i];
+            const data = row.textContent.toLowerCase();
+
+            if (data.includes(filter)) {
+                row.style.display = "";
+            } else {
+                row.style.display = "none";
+            }
+        }
+      });
+    });
+
+    varChoosen = 10;
+    currentMode = 'asc';
+
     function sortTable(changeVar) {
       var table, rows, switching, i, x, y, shouldSwitch;
       table = document.getElementById("myTable");
       switching = true;
-      /*Make a loop that will continue until
-      no switching has been done:*/
-      while (switching) {
-        //start by saying: no switching is done:
-        switching = false;
-        rows = table.rows;
-        /*Loop through all table rows (except the
-        first, which contains table headers):*/
-        for (i = 1; i < (rows.length - 1); i++) {
-          
-          //start by saying there should be no switching:
-          shouldSwitch = false;
-          /*Get the two elements you want to compare,
-          one from current row and one from the next:*/
-          x = rows[i].getElementsByTagName("TD")[changeVar];
-          y = rows[i + 1].getElementsByTagName("TD")[changeVar];
-          //check if the two rows should switch place:
-          if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
-            //if so, mark as a switch and break the loop:
-            shouldSwitch = true;
-            break;
-          }
-        }
-        if (shouldSwitch) {
-          /*If a switch has been marked, make the switch
-          and mark that a switch has been done:*/
-          rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-          switching = true;
+
+      if(changeVar == varChoosen){
+        if (currentMode == 'asc') {
+          currentMode = 'desc'
+        }else{
+          currentMode = 'asc'
         }
       }
+      varChoosen = changeVar
+
+
+      if (currentMode == 'asc') {
+        while (switching) {
+          switching = false;
+          rows = table.rows;
+          for (i = 1; i < (rows.length - 1); i++) {
+            
+            shouldSwitch = false;
+            x = rows[i].getElementsByTagName("TD")[changeVar];
+            y = rows[i + 1].getElementsByTagName("TD")[changeVar];
+            if (changeVar == 1 || changeVar == 5) {
+              if (parseInt(x.innerHTML.toLowerCase())  > parseInt(y.innerHTML.toLowerCase())) {
+              shouldSwitch = true;
+              break;
+              }
+            }
+            else{
+              if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+              shouldSwitch = true;
+              break;
+              }
+            }
+          }
+          if (shouldSwitch) {
+            rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+            switching = true;
+          }
+        }
+      }
+      else{
+        while (switching) {
+          switching = false;
+          rows = table.rows;
+          for (i = 1; i < (rows.length - 1); i++) {
+            
+            shouldSwitch = false;
+            x = rows[i].getElementsByTagName("TD")[changeVar];
+            y = rows[i + 1].getElementsByTagName("TD")[changeVar];
+            if (changeVar == 1 || changeVar == 5) {
+              if (parseInt(x.innerHTML.toLowerCase())  < parseInt(y.innerHTML.toLowerCase())) {
+              shouldSwitch = true;
+              break;
+              }
+            }
+            else{
+              if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+              shouldSwitch = true;
+              break;
+              }
+            }
+          }
+          if (shouldSwitch) {
+            rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+            switching = true;
+          }
+        }
+      }
+
+      
+
     }
+
     function deleteRow(element){
           element.parentElement.parentElement.remove();
         }
@@ -54,9 +119,13 @@
   <body>
     <nav class="navbar navbar-dark fixed-top flex-md-nowrap p-0 shadow" style="background-color: #0039A6;">
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{% url 'index' %}">SEL4C</a>
-      <ul class="navbar-nav px-3">
+      <ul class="navbar-nav px-3 flex-row">
+
     <li class="nav-item text-nowrap">
-      <a class="nav-link" href="{% url 'login' %}"> Cerrar Sesión</a>
+      <a class="nav-link text-light mr-5">   {{ request.user}}</a>
+    </li>
+    <li class="nav-item text-nowrap">
+      <a class="nav-link text-light" href="{% url 'logoutUser' %}"> Cerrar Sesión</a>
     </li>
   </ul>
 </nav>
@@ -73,13 +142,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="{% url 'users' %}">
+            <a class="nav-link active" href="{% url 'users' 1 %}">
               <span data-feather="file"></span>
               Usuarios <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'managers' %}">
+            <a class="nav-link" href="{% url 'managers' 1 %}">
               <span data-feather="shopping-cart"></span>
               Administradores
             </a>
@@ -112,6 +181,12 @@
         </div>
       </div>
 
+      <div class="d-flex">
+
+        <div class="row justify-content-start w-100">
+          <input class="form-control col-12 mb-3" type="text" id="searchInput" placeholder="Buscar usuario...">
+        </div>
+      </div>
       
       <div class="table-responsive">
         <table id="myTable" class="table table-striped table-sm table-hover">
@@ -151,6 +226,25 @@
           </tbody>
         </table>
       </div>
+
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="{% url 'users' pagePrev %}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="{% url 'users' pageFirst %}">{{ pageFirst }}</a></li>
+          <li class="page-item"><a class="page-link" href="{% url 'users' pageSecond %}">{{ pageSecond }}</a></li>
+          <li class="page-item"><a class="page-link" href="{% url 'users' pageThird %}">{{ pageThird }}</a></li>
+          <li class="page-item">
+            <a class="page-link" href="{% url 'users' pageNext %}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
     </main>
   </div>
 </div>
